# Chicago-Crash-Data-Pipeline

./: data transformation.ipynb  main.py  pyproject.toml  script.py
.ipynb_checkpoints/: data extraction-checkpoint.ipynb  data transformation-checkpoint.ipynb  load transformed data-checkpoint.ipynb  test-checkpoint.ipynb
config/: log_config.py
data/: laundry_mat.sqlite  video.txt
extraction/: extract.py
