[project]
name = "chicago-crash-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.1.4",
    "config>=0.5.1",
    "ipykernel>=7.1.0",
    "jedi>=0.19.2",
    "jupyterlab>=4.5.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "urllib3>=2.6.3",
]
